--- a/Role Call/Role Call.vcxproj
+++ b/Role Call/Role Call.vcxproj
@@ -68,6 +68,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="bullet.cpp" />
     <ClCompile Include="entity.cpp" />
     <ClCompile Include="entity_manager.cpp" />
     <ClCompile Include="game_over.cpp" />
@@ -78,9 +79,11 @@
     <ClCompile Include="main_menu.cpp" />
     <ClCompile Include="map.cpp" />
     <ClCompile Include="score.cpp" />
+    <ClCompile Include="speech.cpp" />
     <ClCompile Include="win_screen.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="bullet.h" />
     <ClInclude Include="entity.h" />
     <ClInclude Include="entity_manager.h" />
     <ClInclude Include="game_over.h" />
@@ -91,7 +94,11 @@
     <ClInclude Include="main_menu.h" />
     <ClInclude Include="map.h" />
     <ClInclude Include="score.h" />
+    <ClInclude Include="speech.h" />
     <ClInclude Include="win_screen.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
