--- a/Role Call/Role Call.vcxproj.filters
+++ b/Role Call/Role Call.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="speech.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="base_npc.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="entity.h">
@@ -111,6 +114,9 @@
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
     <ClInclude Include="speech.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="base_npc.h">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
